# AI-NovelToScreenplay

./: README.md
novel-to-script/: .env.example  .gitignore  README.md  pyproject.toml  schema_doc.md  test_novel.txt  test_novel2.epub  test_novel2.md
novel-to-script/src/: __init__.py  cli.py  config.py
novel-to-script/src/llm/: __init__.py  base.py  claude_adapter.py  ollama_adapter.py  openai_adapter.py
novel-to-script/src/parser/: __init__.py  chapter.py  epub.py  txt.py
novel-to-script/src/pipeline/: __init__.py  assembler.py  chapter_processor.py  character.py  dialogue.py  pipeline.py  scene.py  summary.py
novel-to-script/src/schema/: __init__.py  screenplay.py  validator.py
novel-to-script/src/web/: __init__.py  app.py  server.py
novel-to-script/src/web/templates/: index.html
novel-to-script/tests/: test_assembler.py
